# claw

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  check_oc.sh  check_oc2.sh  d3.sh  d4.sh  debug_container.sh  debug_llm_proxy.sh  debug_onboard.sh  debug_setup.sh  docker-compose.yml  find_oc_cmd.sh  sidercar_reset.sh
contracts/: common.schema.json  execution-claim.schema.json  execution-exited.schema.json  execution-registration.schema.json  execution-started.schema.json  hardware-topology.schema.json  model-event.schema.json  tool-before-request.schema.json  (+3 more)
services/scheduler/: Dockerfile  README.md  pyproject.toml
services/scheduler/src/agent_scheduler/: config.py  executions.py  launcher.py  llm_proxy.py  main.py  trace.py
services/scheduler/src/agent_scheduler/admission/: leases.py
services/scheduler/src/agent_scheduler/api/: app.py  dependencies.py
services/scheduler/src/agent_scheduler/calibration/: ewma.py
services/scheduler/src/agent_scheduler/contracts/: models.py
services/scheduler/src/agent_scheduler/monitoring/: __init__.py  docker_exec.py  process.py  tool_runtime.py
services/scheduler/src/agent_scheduler/policies/: concurrency.py
services/scheduler/src/agent_scheduler/predictors/: exec_classifier.py  static_profile.py
services/scheduler/src/agent_scheduler/storage/: sqlite.py
services/scheduler/src/agent_scheduler/telemetry/: metrics.py
services/scheduler/tests/: test_config.py  test_launcher.py  test_process_sampler.py  test_sidecar.py
services/scheduler/traces/: unknown_unknown.jsonl  unknown_unknown_unknown.jsonl
(+104 files in other folders)
