[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-scheduler"
version = "0.1.0"
description = "Hardware-aware scheduler sidecar for OpenClaw"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2",
  "psutil>=5.9",
  "uvicorn>=0.27",
  "aiosqlite>=0.19",
  "prometheus-client>=0.20"
]

[project.scripts]
claw-launch = "agent_scheduler.launcher:main"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.10", "httpx>=0.27", "jsonschema>=4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--basetemp ../../.pytest-tmp"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
